# engram

./: .gitignore  CLAUDE.md  README.md  config.example.json  config.json  mlx_server.py  package.json  pyproject.toml  tsconfig.json
routines/: dilucidate.md
scripts/: ensure-caption-server.ts  ensure-chroma.ts  ensure-embed-server.ts  ensure-ollama.ts  migrate.ts  setup.ts  start.sh  start.ts
server/: package.json  pnpm-lock.yaml
server/src/: body-hash.ts  captioning.ts  chroma.ts  config.ts  index.ts  logger.ts  media-cache.ts  media-processor.ts  startup.ts  vault-index.ts  vault.ts  watcher.ts  wikilinks.ts
server/src/__tests__/: batch-embed.test.ts  body-hash.test.ts  cache.test.ts  captioning.test.ts  chroma.test.ts  chunk-engram.test.ts  cluster.test.ts  config.test.ts  delete-engram.test.ts  dilucidate-meta.test.ts  embeddings-index.test.ts  keyword-search.test.ts  media-cache.test.ts  media-processor.test.ts  memory-select.test.ts  qwen-vl.test.ts  read-engram.test.ts  read-engrams.test.ts  save-memory.test.ts  search-memory.test.ts  startup.test.ts  task-instruction.test.ts  update-engram.test.ts  vault-class.test.ts  vault-index.test.ts  vault-structure.test.ts  vault.test.ts  watcher-md.test.ts  watcher-media.test.ts  wikilinks.test.ts
server/src/dilucidate/: cluster.ts
skills/dilucidate/: SKILL.md
skills/prefill/: SKILL.md
skills/save-memory/: SKILL.md
skills/surface-memories/: SKILL.md
skills/update-important-memory/: SKILL.md
specs/: clustering-scalability.md  gray-matter-frontmatter.md  hybrid-search.md  lru-query-cache.md
(+27 files in other folders)
